--- a/confectio-dark-syntax/styles/colors.less
+++ b/confectio-dark-syntax/styles/colors.less
@@ -2,7 +2,7 @@
 
 // Config -----------------------------------
 @syntax-hue:          210;
-@syntax-saturation:    4%;
+@syntax-saturation:    8%;
 @syntax-brightness:   84%;
 
 // Base colors -----------------------------------
@@ -21,28 +21,28 @@
 
 // Colors -----------------------------------
 @red:     hsl(  0, 100%, 73%); // #FF7777; <- Red
-@orange:  hsl( 16, 100%, 73%); // #FF9A75; <- Orange
+@orange:  hsl( 16, 100%, 73%); // #FFAA77; <- Orange
 @orange2: hsl( 30, 100%, 73%); // #FFCC77; <- Orange 2
-@yellow:  hsl( 52,  90%, 73%); // #F8E87C; <- Yellow
+@yellow:  hsl( 52, 100%, 73%); // #FFEE77; <- Yellow
 @green:   hsl(120,  60%, 67%); // #77DD77; <- Green
 @teal:    hsl(180,  45%, 63%); // #77CCCC; <- Teal
 @cyan:    hsl(187, 100%, 73%); // #77EEFF; <- Cyan
-@blue:    hsl(218, 100%, 73%); // #77AAFF; <- Blue
-@blue2:   hsl(240,  50%, 73%); // #9999DD; <- Blue 2
-@purple:  hsl(264,  71%, 77%); // #BB99EE; <- Purple
-@purple2: hsl(315, 100%, 73%); // #FF77DD; <- Purple 2
-@magenta: hsl(336, 100%, 73%); // #FF77BB; <- Magenta
+@blue:    hsl(217, 100%, 73%); // #77AAFF; <- Blue
+@blue2:   hsl(240, 100%, 73%); // #7777FF; <- Blue 2
+@purple:  hsl(270, 100%, 73%); // #BB77FF; <- Purple
+@purple2: hsl(292, 100%, 73%); // #EE77FF; <- Purple 2
+@magenta: hsl(338, 100%, 73%); // #FF77AA; <- Magenta
 
 // Faded Colors ---------------------------
-@red-l:     fade(@red,     60%);
-@orange-l:  fade(@orange,  60%);
-@orange2-l: fade(@orange2, 60%);
-@yellow-l:  fade(@yellow,  60%);
-@green-l:   fade(@green,   60%);
-@teal-l:    fade(@teal,    60%);
-@cyan-l:    fade(@cyan,    60%);
-@blue-l:    fade(@blue,    60%);
-@blue2-l:   fade(@blue2,   60%);
-@purple-l:  fade(@purple,  60%);
-@purple2-l: fade(@purple2, 60%);
-@magenta-l: fade(@magenta, 60%);
+@red-l:     fade(@red,     60%); // #AD5E60;
+@orange-l:  fade(@orange,  60%); // #AD7C60;
+@orange2-l: fade(@orange2, 60%); // #AD9160;
+@yellow-l:  fade(@yellow,  60%); // #ADA560;
+@green-l:   fade(@green,   60%); // #5CAF60;
+@teal-l:    fade(@teal,    60%); // #5C9193;
+@cyan-l:    fade(@cyan,    60%); // #5CA5B1;
+@blue-l:    fade(@blue,    60%); // #5C7CB1;
+@blue2-l:   fade(@blue2,   60%); // #5C5EB1;
+@purple-l:  fade(@purple,  60%); // #855EB1;
+@purple2-l: fade(@purple2, 60%); // #A35EB1;
+@magenta-l: fade(@magenta, 60%); // #AD5E7E;
