--- a/confectio-dark-syntax/styles/syntax-variables.less
+++ b/confectio-dark-syntax/styles/syntax-variables.less
@@ -38,5 +38,5 @@
 
 @syntax-deprecated-fg: darken(@syntax-color-modified, 30%);
 @syntax-deprecated-bg: @syntax-color-modified;
-@syntax-illegal-fg:    white;
+@syntax-illegal-fg:    @syntax-fg;
 @syntax-illegal-bg:    @syntax-color-removed;
