--- a/confectio-light-syntax/styles/colors.less
+++ b/confectio-light-syntax/styles/colors.less
@@ -2,8 +2,8 @@
 
 // Config -----------------------------------
 @syntax-hue:          210;
-@syntax-saturation:    4%;
-@syntax-brightness:   98%;
+@syntax-saturation:   20%;
+@syntax-brightness:   96%;
 
 // Base colors -----------------------------------
 @syntax-accent: hsl(@syntax-hue, 71%, 47%);
@@ -26,30 +26,30 @@
 // Colors -----------------------------------
 @red:     hsl(  0, 67%, 40%); // #AA2222; <- Red
 @orange:  hsl( 16, 73%, 50%); // #DD5522; <- Orange
-@orange2: hsl( 30, 86%, 53%); // #EE8822; <- Orange 2
-@yellow:  hsl( 44, 73%, 50%); // #DDAA22; <- Yellow
+@orange2: hsl( 32, 73%, 50%); // #DD8822; <- Orange 2
+@yellow:  hsl( 40, 86%, 53%); // #EEAA22; <- Yellow
 @green:   hsl(120, 60%, 33%); // #228822; <- Green
 @teal:    hsl(180, 56%, 30%); // #227777; <- Teal
-@cyan:    hsl(187, 67%, 40%); // #2299AA; <- Cyan
+@cyan:    hsl(195, 67%, 40%); // #2288AA; <- Cyan
 @blue:    hsl(218, 67%, 40%); // #2255AA; <- Blue
-@blue2:   hsl(240, 33%, 40%); // #444488; <- Blue 2
-@purple:  hsl(264, 38%, 43%); // #664499; <- Purple
-@purple2: hsl(315, 67%, 40%); // #AA2288; <- Purple 2
-@magenta: hsl(339, 73%, 50%); // #DD2266; <- Magenta
+@blue2:   hsl(240, 67%, 40%); // #2222AA; <- Blue 2
+@purple:  hsl(270, 67%, 40%); // #6622AA; <- Purple
+@purple2: hsl(300, 67%, 40%); // #AA22AA; <- Purple 2
+@magenta: hsl(339, 67%, 40%); // #AA2255; <- Magenta
 
 // Lightened Colors ---------------------------
-@red-l:     desaturate(lighten(@red,     20%), 20%);
-@orange-l:  desaturate(lighten(@orange,  20%), 20%);
-@orange2-l: desaturate(lighten(@orange2, 20%), 20%);
-@yellow-l:  desaturate(lighten(@yellow,  20%), 20%);
-@green-l:   desaturate(lighten(@green,   20%), 20%);
-@teal-l:    desaturate(lighten(@teal,    20%), 20%);
-@cyan-l:    desaturate(lighten(@cyan,    20%), 20%);
-@blue-l:    desaturate(lighten(@blue,    20%), 20%);
-@blue2-l:   desaturate(lighten(@blue2,   20%), 20%);
-@purple-l:  desaturate(lighten(@purple,  20%), 20%);
-@purple2-l: desaturate(lighten(@purple2, 20%), 20%);
-@magenta-l: desaturate(lighten(@magenta, 20%), 20%);
+@red-l:     desaturate(lighten(@red,     20%), 20%); // #C96969;
+@orange-l:  desaturate(lighten(@orange,  20%), 20%); // #DBA08A;
+@orange2-l: desaturate(lighten(@orange2, 20%), 20%); // #DBB58A;
+@yellow-l:  desaturate(lighten(@yellow,  20%), 20%); // #E8C98D;
+@green-l:   desaturate(lighten(@green,   20%), 20%); // #69B169;
+@teal-l:    desaturate(lighten(@teal,    20%), 20%); // #52ADAD;
+@cyan-l:    desaturate(lighten(@cyan,    20%), 20%); // #69B1C9;
+@blue-l:    desaturate(lighten(@blue,    20%), 20%); // #698CC9;
+@blue2-l:   desaturate(lighten(@blue2,   20%), 20%); // #6969C9;
+@purple-l:  desaturate(lighten(@purple,  20%), 20%); // #9969C9;
+@purple2-l: desaturate(lighten(@purple2, 20%), 20%); // #C969C9;
+@magenta-l: desaturate(lighten(@magenta, 20%), 20%); // #C9698B;
 
 // Faded Colors ---------------------------
 // @red-l:     fade(@red,     60%);
