--- a/confectio-light-syntax/styles/base.less
+++ b/confectio-light-syntax/styles/base.less
@@ -270,6 +270,7 @@ atom-text-editor .search-results .marker.current-result .region,
   }
 
   & .constant {
+    background-color: fade(@green, 8%);
   }
 
   & .punctuation {
