Changed bold weights back
They look better as ‘regular’ bold weight after all.

--- a/confectio-light-syntax/styles/base.less
+++ b/confectio-light-syntax/styles/base.less
@@ -120,7 +120,7 @@ atom-text-editor .search-results .marker.current-result .region,
   &.name.function,
   &.name.type.function {
     color: @purple;
-    font-weight: 600;
+    font-weight: bold;
   }
 
   &.name.class,
@@ -134,7 +134,7 @@ atom-text-editor .search-results .marker.current-result .region,
 
   &.name.tag {
     color: @blue;
-    font-weight: 600;
+    font-weight: bold;
   }
 
   &.other.attribute-name {
@@ -142,7 +142,7 @@ atom-text-editor .search-results .marker.current-result .region,
 
     &.id {
       color: darken(@blue, 10%);
-      font-weight: 600;
+      font-weight: bold;
     }
   }
 
@@ -156,7 +156,7 @@ atom-text-editor .search-results .marker.current-result .region,
 
   &.control {
     color: @blue;
-    font-weight: 600;
+    font-weight: bold;
   }
 
   &.operator {
@@ -185,7 +185,7 @@ atom-text-editor .search-results .marker.current-result .region,
   }
 
   &.function {
-    font-weight: 600;
+    font-weight: bold;
   }
 
   & .punctuation {
@@ -209,7 +209,7 @@ atom-text-editor .search-results .marker.current-result .region,
 
   &.other.color,
   &.language {
-    color: @yellow;
+    color: @orange2;
   }
 
   &.other.symbol {
@@ -319,7 +319,7 @@ atom-text-editor .search-results .marker.current-result .region,
 
     &.bold {
       color: @orange2-l;
-      font-weight: 600;
+      font-weight: bold;
     }
 
     &.italic {
@@ -345,7 +345,7 @@ atom-text-editor .search-results .marker.current-result .region,
   &.class,
   &.type.class {
     color: @magenta;
-    font-weight: 600;
+    font-weight: bold;
   }
 
   &.function,
@@ -420,7 +420,7 @@ atom-text-editor .search-results .marker.current-result .region,
 .markup {
   &.bold {
     color: @orange;
-    font-weight: 600;
+    font-weight: bold;
   }
 
   &.code {
@@ -510,7 +510,7 @@ atom-text-editor[mini] .scroll-view,
 
   .keyword.control.html {
     color: @blue;
-    font-weight: 600;
+    font-weight: bold;
   }
 
   .entity.other.attribute-name {
@@ -531,7 +531,7 @@ atom-text-editor[mini] .scroll-view,
 
   .keyword.other.important {
     color: @yellow;
-    font-weight: 600;
+    font-weight: bold;
   }
 }
 
@@ -541,7 +541,7 @@ atom-text-editor[mini] .scroll-view,
 
     &.heading {
       color: @red;
-      font-weight: 600;
+      font-weight: bold;
 
       &.marker {
         color: @red-l;
@@ -575,7 +575,7 @@ atom-text-editor[mini] .scroll-view,
 
       &.support {
         color: @green;
-        font-weight: 600;
+        font-weight: bold;
       }
     }
   }
