--- a/confectio-dark-syntax/styles/syntax-variables.less
+++ b/confectio-dark-syntax/styles/syntax-variables.less
@@ -1,42 +1,55 @@
-@import "colors";
+@import "colors.less";
 
-// This defines all syntax variables that syntax themes must implement when they
-// include a syntax-variables.less file.
+// Official Syntax Variables -----------------------------------
 
 // General colors
-@syntax-text-color: @syntax-fg;
-@syntax-cursor-color: white;
-@syntax-selection-color: @syntax-guide;
-@syntax-selection-flash-color: lighten(@syntax-accent, 20%);
-@syntax-background-color: @syntax-bg;
+@syntax-text-color:            @syntax-fg;
+@syntax-cursor-color:          @syntax-accent;
+@syntax-selection-color:       lighten(@syntax-accent, 20%);
+@syntax-selection-flash-color: @syntax-accent;
+@syntax-background-color:      @syntax-bg;
 
 // Guide colors
-@syntax-wrap-guide-color: @dark-gray;
-@syntax-indent-guide-color: @gray;
+@syntax-wrap-guide-color:          @dark-gray;
+@syntax-indent-guide-color:        @gray;
 @syntax-invisible-character-color: @dark-gray;
 
 // For find and replace markers
-@syntax-result-marker-color: @gray;
-@syntax-result-marker-color-selected: white;
+@syntax-result-marker-color: fade(@syntax-accent, 24%);
+@syntax-result-marker-color-selected: @syntax-accent;
 
 // Gutter colors
-@syntax-gutter-text-color: @light-gray;
-@syntax-gutter-text-color-selected: @syntax-gutter-text-color;
+@syntax-gutter-text-color: @dark-gray;
+@syntax-gutter-text-color-selected: lighten(@syntax-gutter-text-color, 8%);
 @syntax-gutter-background-color: @syntax-bg;
-@syntax-gutter-background-color-selected: @dark-gray;
+@syntax-gutter-background-color-selected: lighten(@dark-gray, 8%);
 
-// For git diff info. i.e. in the gutter
+// Git colors - For git diff info. i.e. in the gutter
 @syntax-color-renamed:  @blue;
 @syntax-color-added:    @green;
 @syntax-color-modified: @orange;
 @syntax-color-removed:  @red;
 
+// For language entity colors
+@syntax-color-variable:   @red;
+@syntax-color-constant:   @orange;
+@syntax-color-property:   @light-gray;
+@syntax-color-value:      @gray;
+@syntax-color-function:   @blue;
+@syntax-color-method:     @blue-2;
+@syntax-color-class:      @orange-2;
+@syntax-color-keyword:    @purple;
+@syntax-color-tag:        @red;
+@syntax-color-attribute:  @orange;
+@syntax-color-import:     @purple;
+@syntax-color-snippet:    @green;
+
 // Custom Syntax Variables -----------------------------------
 // Don't use in packages
 
-@syntax-cursor-line: fade(@syntax-fg, 4%); // needs to be semi-transparent to show search results
+@syntax-cursor-line: fade(@syntax-fg, 8%); // needs to be semi-transparent to show search results
 
-@syntax-deprecated-fg: darken(@syntax-color-modified, 30%);
+@syntax-deprecated-fg: lighten(@syntax-color-modified, 30%);
 @syntax-deprecated-bg: @syntax-color-modified;
 @syntax-illegal-fg:    @syntax-fg;
 @syntax-illegal-bg:    @syntax-color-removed;
