--- a/confectio-light-syntax/styles/syntax-variables.less
+++ b/confectio-light-syntax/styles/syntax-variables.less
@@ -21,7 +21,7 @@
 // Gutter colors
 @syntax-gutter-text-color: @light-gray;
 @syntax-gutter-text-color-selected: darken(@syntax-gutter-text-color, 8%);
-@syntax-gutter-background-color: @syntax-bg;
+@syntax-gutter-background-color: darken(@syntax-bg, 4%);
 @syntax-gutter-background-color-selected: darken(@syntax-bg, 8%);
 
 // Git colors - For git diff info. i.e. in the gutter
@@ -40,7 +40,7 @@
 @syntax-color-class:     @orange-2;
 @syntax-color-keyword:   @purple;
 @syntax-color-tag:       @red;
-@syntax-color-attribute: @orange;
+@syntax-color-attribute: @teal;
 @syntax-color-import:    @purple;
 @syntax-color-snippet:   @green;
 
