--- a/confectio-dark-syntax/styles/syntax/gfm.less
+++ b/confectio-dark-syntax/styles/syntax/gfm.less
@@ -3,11 +3,11 @@
     -webkit-font-smoothing: auto;
 
     &.syntax--heading {
-      color: @red;
+      color: @green;
       font-weight: bold;
 
       &.syntax--marker {
-        color: @red-l;
+        color: @green-l;
       }
     }
 
