--- a/confectio-light-syntax/styles/syntax/_base.less
+++ b/confectio-light-syntax/styles/syntax/_base.less
@@ -271,15 +271,13 @@
   color: @magenta;
 
   &.syntax--class,
-  &.syntax--type {
+  &.syntax--type.syntax--class {
     color: @magenta;
-    font-weight: bold;
   }
 
   &.syntax--function,
   &.syntax--type.syntax--function {
     color: @cyan;
-    // font-style: italic;
 
     &.syntax--any-method {
       color: @blue;
